States Paid - Defendant - amount paid & when

--- a/src/main/features/response/views/check-and-send.njk
+++ b/src/main/features/response/views/check-and-send.njk
@@ -15,16 +15,14 @@
     {{ csrfProtection(csrf) }}
 
     {{ tableStart('yourDetails', 'Your details') }}
-    {{
-      partyDetailsSummaryFragment(
-        partyDetails = draft.defendantDetails.partyDetails,
-        changeLinks = {
-          contactPerson: ResponsePaths.defendantYourDetailsPage.evaluateUri({ externalId: claim.externalId }),
-          address: ResponsePaths.defendantYourDetailsPage.evaluateUri({ externalId: claim.externalId }),
-          dateOfBirth: ResponsePaths.defendantDateOfBirthPage.evaluateUri({ externalId: claim.externalId })
-        }
-      )
-    }}
+    {{ partyDetailsSummaryFragment(
+      partyDetails = draft.defendantDetails.partyDetails,
+      changeLinks = {
+        contactPerson: ResponsePaths.defendantYourDetailsPage.evaluateUri({ externalId: claim.externalId }),
+        address: ResponsePaths.defendantYourDetailsPage.evaluateUri({ externalId: claim.externalId }),
+        dateOfBirth: ResponsePaths.defendantDateOfBirthPage.evaluateUri({ externalId: claim.externalId })
+      }
+    ) }}
     {{ row(label = 'Contact number (optional)', value = draft.defendantDetails.mobilePhone.number, changeLink = ResponsePaths.defendantMobilePage.evaluateUri({ externalId: claim.externalId }), bold = true) }}
 
     {{ tableEnd() }}
@@ -32,12 +30,11 @@
     {{ tableStart('moneyOwed', 'Your response to the claim') }}
 
     {{ row(
-        label = 'How do you respond to the claim?',
-        value = t(draft.response.type.displayValue) | capitalize,
-        changeLink = ResponsePaths.responseTypePage.evaluateUri({ externalId: claim.externalId }),
-        bold = true
-       )
-    }}
+      label = 'How do you respond to the claim?',
+      value = t(draft.response.type.displayValue) | capitalize,
+      changeLink = ResponsePaths.responseTypePage.evaluateUri({ externalId: claim.externalId }),
+      bold = true
+    ) }}
 
     {% if admissionsApplicable and draft.isResponsePartiallyAdmitted() %}
       {{ row(
@@ -45,8 +42,7 @@
         value = t(draft.partialAdmission.alreadyPaid.option.option) | capitalize,
         changeLink = PartAdmissionPaths.alreadyPaidPage.evaluateUri({ externalId: claim.externalId }),
         bold = true
-      )
-      }}
+      ) }}
     {% endif %}
 
     {% if draft.response.type === ResponseType.DEFENCE %}
@@ -63,38 +59,42 @@
       {% endif %}
 
       {{ row(label = 'Why do you reject all of this claim?', value = rejectAllOption, changeLink = ResponsePaths.defenceRejectAllOfClaimPage.evaluateUri({ externalId: claim.externalId }), bold = true) }}
+
+      {% if draft.rejectAllOfClaim.option === RejectAllOfClaimOption.ALREADY_PAID %}
+        {{ row(label = 'How much have you paid?', value = t(draft.rejectAllOfClaim.howMuchHaveYouPaid.amount | numeral), changeLink = ResponsePaths.howMuchHaveYouPaid.evaluateUri({ externalId: claim.externalId }), bold = true) }}
+
+        {% if draft.rejectAllOfClaim.howMuchHaveYouPaid.amount < claim.totalAmountTillToday %}
+          {{ row(label = 'Why do you disagree with the amount claimed?', value = t(draft.rejectAllOfClaim.whyDoYouDisagree.text), changeLink = ResponsePaths.whyDoYouDisagreePage.evaluateUri({ externalId: claim.externalId }), bold = true) }}
+        {% endif %}
+      {% endif %}
     {% endif %}
 
     {% if admissionsApplicable and draft.isResponseFullyAdmitted() and draft.fullAdmission.paymentOption.isOfType(DefendantPaymentType.IMMEDIATELY) %}
 
-      {{
-        whenWillYouPayRow(
-          value = t(draft.fullAdmission.paymentOption.option.displayValue) | capitalize,
-          url = FullAdmissionPaths.paymentOptionPage.evaluateUri({ externalId: claim.externalId })
-        )
-      }}
+      {{ whenWillYouPayRow(
+        value = t(draft.fullAdmission.paymentOption.option.displayValue) | capitalize,
+        url = FullAdmissionPaths.paymentOptionPage.evaluateUri({ externalId: claim.externalId })
+      ) }}
     {% endif %}
 
     {{ tableEnd() }}
 
     {% if draft.isResponseFullyAdmitted() and not draft.fullAdmission.paymentOption.isOfType(DefendantPaymentType.IMMEDIATELY) %}
 
-      {{
-        notImmediatePayment(
-          type = draft.fullAdmission.paymentOption,
-          paymentDate = draft.fullAdmission.paymentDate,
-          paymentPlan = draft.fullAdmission.paymentPlan,
-          explanation = draft.statementOfMeans.explanation.text,
-          Paths = FullAdmissionPaths,
-          externalId = claim.externalId
-        )
-      }}
+      {{ notImmediatePayment(
+        type = draft.fullAdmission.paymentOption,
+        paymentDate = draft.fullAdmission.paymentDate,
+        paymentPlan = draft.fullAdmission.paymentPlan,
+        explanation = draft.statementOfMeans.explanation.text,
+        Paths = FullAdmissionPaths,
+        externalId = claim.externalId
+      ) }}
     {% endif %}
 
     {% if draft.isResponseRejectedFullyWithAmountClaimedPaid() %}
       {{ tableStart('yourResponse', 'Your response') }}
-        {{ row(label = 'When did you pay this amount?', value = draft.whenDidYouPay.date.toMoment() | date, changeLink = ResponsePaths.whenDidYouPay.evaluateUri({ externalId: claim.externalId }), bold = true) }}
-        {{ row(label = 'How did you pay the amount claimed?', value = draft.whenDidYouPay.text, changeLink = ResponsePaths.whenDidYouPay.evaluateUri({ externalId: claim.externalId }), bold = true) }}
+      {{ row(label = 'When did you pay this amount?', value = draft.whenDidYouPay.date.toMoment() | date, changeLink = ResponsePaths.whenDidYouPay.evaluateUri({ externalId: claim.externalId }), bold = true) }}
+      {{ row(label = 'How did you pay the amount claimed?', value = draft.whenDidYouPay.text, changeLink = ResponsePaths.whenDidYouPay.evaluateUri({ externalId: claim.externalId }), bold = true) }}
       {{ tableEnd() }}
     {% endif %}
 
@@ -104,127 +104,103 @@
 
       {% if draft.isResponsePartiallyAdmittedAndAlreadyPaid() %}
 
-        {{
-          row(
-            label = 'How much money have you paid?',
-            value = draft.partialAdmission.howMuchHaveYouPaid.amount | numeral,
-            changeLink = PartAdmissionPaths.howMuchHaveYouPaidPage.evaluateUri({ externalId: claim.externalId }),
-            bottomBorder = false,
-            bold = true
-          )
-        }}
-        {{
-          row(
-            label = 'When did you pay this amount?',
-            value = draft.partialAdmission.howMuchHaveYouPaid.date.toMoment() | date,
-            bottomBorder = false,
-            bold = true
-          )
-        }}
+        {{ row(
+          label = 'How much money have you paid?',
+          value = draft.partialAdmission.howMuchHaveYouPaid.amount | numeral,
+          changeLink = PartAdmissionPaths.howMuchHaveYouPaidPage.evaluateUri({ externalId: claim.externalId }),
+          bottomBorder = false,
+          bold = true
+        ) }}
+        {{ row(
+          label = 'When did you pay this amount?',
+          value = draft.partialAdmission.howMuchHaveYouPaid.date.toMoment() | date,
+          bottomBorder = false,
+          bold = true
+        ) }}
 
-        {{
-          row(
-            label = 'How did you pay the amount claimed?',
-            value = draft.partialAdmission.howMuchHaveYouPaid.text,
-            bottomBorder = true,
-            bold = true
-          )
-        }}
+        {{ row(
+          label = 'How did you pay the amount claimed?',
+          value = draft.partialAdmission.howMuchHaveYouPaid.text,
+          bottomBorder = true,
+          bold = true
+        ) }}
 
       {% else %}
 
-        {{
-          row(
-            label = 'How much money do you admit you owe?',
-            value = draft.partialAdmission.howMuchDoYouOwe.amount | numeral,
-            changeLink = PartAdmissionPaths.howMuchDoYouOwePage.evaluateUri({ externalId: claim.externalId }),
-            bottomBorder = false,
-            bold = true
-          )
-        }}
+        {{ row(
+          label = 'How much money do you admit you owe?',
+          value = draft.partialAdmission.howMuchDoYouOwe.amount | numeral,
+          changeLink = PartAdmissionPaths.howMuchDoYouOwePage.evaluateUri({ externalId: claim.externalId }),
+          bottomBorder = false,
+          bold = true
+        ) }}
 
       {% endif %}
 
-      {{
-        row(
-          label = 'Why do you disagree with the amount claimed?',
-          value = draft.partialAdmission.whyDoYouDisagree.text,
-          changeLink = PartAdmissionPaths.whyDoYouDisagreePage.evaluateUri({ externalId: claim.externalId }),
-          bold = true
-        )
-      }}
+      {{ row(
+        label = 'Why do you disagree with the amount claimed?',
+        value = draft.partialAdmission.whyDoYouDisagree.text,
+        changeLink = PartAdmissionPaths.whyDoYouDisagreePage.evaluateUri({ externalId: claim.externalId }),
+        bold = true
+      ) }}
 
       {% if draft.isResponsePartiallyAdmittedAndAlreadyPaid() %}
-        {{
-          timelineCheckAndSend(
-            header = 'Timeline of what happened (optional)',
-            timeline = draft.partialAdmission.timeline.getPopulatedRowsOnly(),
-            url = ResponsePaths.timelinePage.evaluateUri({ externalId: claim.externalId }),
-            bottomBorder = false
-          )
-        }}
+        {{ timelineCheckAndSend(
+          header = 'Timeline of what happened (optional)',
+          timeline = draft.partialAdmission.timeline.getPopulatedRowsOnly(),
+          url = ResponsePaths.timelinePage.evaluateUri({ externalId: claim.externalId }),
+          bottomBorder = false
+        ) }}
         {{ row(label = 'Comments about their timeline (optional)', value = draft.partialAdmission.timeline.comment | default(''), bold = true) }}
-        {{
-          evidenceCheckAndSend(
-            header = 'Your evidence (optional)',
-            evidence = draft.partialAdmission.evidence.getPopulatedRowsOnly(),
-            url = ResponsePaths.evidencePage.evaluateUri({ externalId: claim.externalId }),
-            bottomBorder = false
-          )
-        }}
+        {{ evidenceCheckAndSend(
+          header = 'Your evidence (optional)',
+          evidence = draft.partialAdmission.evidence.getPopulatedRowsOnly(),
+          url = ResponsePaths.evidencePage.evaluateUri({ externalId: claim.externalId }),
+          bottomBorder = false
+        ) }}
         {{ row(label = 'Comments about their evidence (optional)', value = draft.partialAdmission.evidence.comment | default(''), bold = true) }}
       {% else %}
         {% if draft.partialAdmission.paymentOption.isOfType(DefendantPaymentType.IMMEDIATELY) %}
           {{ tableStart('whenWillYouPay', 'When you’ll pay') }}
-          {{
-            whenWillYouPayRow(
-              value = t(draft.partialAdmission.paymentOption.option.displayValue) | capitalize,
-              url = PartAdmissionPaths.paymentOptionPage.evaluateUri({ externalId: claim.externalId })
-            )
-          }}
+          {{ whenWillYouPayRow(
+            value = t(draft.partialAdmission.paymentOption.option.displayValue) | capitalize,
+            url = PartAdmissionPaths.paymentOptionPage.evaluateUri({ externalId: claim.externalId })
+          ) }}
           {{ tableEnd() }}
         {% else %}
-          {{
-            notImmediatePayment(
-              type = draft.partialAdmission.paymentOption,
-              paymentDate = draft.partialAdmission.paymentDate,
-              paymentPlan = draft.partialAdmission.paymentPlan,
-              explanation = draft.statementOfMeans.explanation.text,
-              Paths = PartAdmissionPaths,
-              externalId = claim.externalId
-            )
-          }}
+          {{ notImmediatePayment(
+            type = draft.partialAdmission.paymentOption,
+            paymentDate = draft.partialAdmission.paymentDate,
+            paymentPlan = draft.partialAdmission.paymentPlan,
+            explanation = draft.statementOfMeans.explanation.text,
+            Paths = PartAdmissionPaths,
+            externalId = claim.externalId
+          ) }}
         {% endif %}
       {% endif %}
     {% endif %}
 
     {% if draft.isResponseRejectedFullyWithDispute() %}
       {{ tableStart('responseDetails', 'Response details') }}
-      {{
-          row(
-            label = 'Why you disagree with the claim',
-            value = draft.defence.text,
-            changeLink = ResponsePaths.defencePage.evaluateUri({ externalId: claim.externalId }),
-            bold = true
-          )
-      }}
+      {{ row(
+        label = 'Why you disagree with the claim',
+        value = draft.defence.text,
+        changeLink = ResponsePaths.defencePage.evaluateUri({ externalId: claim.externalId }),
+        bold = true
+      ) }}
 
-      {{
-        timelineCheckAndSend(
-          header = 'Timeline of what happened (optional)',
-          timeline = draft.timeline.getPopulatedRowsOnly(),
-          url = ResponsePaths.timelinePage.evaluateUri({ externalId: claim.externalId })
-        )
-      }}
+      {{ timelineCheckAndSend(
+        header = 'Timeline of what happened (optional)',
+        timeline = draft.timeline.getPopulatedRowsOnly(),
+        url = ResponsePaths.timelinePage.evaluateUri({ externalId: claim.externalId })
+      ) }}
       {{ row(label = 'Comments about their timeline (optional)', value = draft.timeline.comment | default(''), bold = true) }}
 
-      {{
-        evidenceCheckAndSend(
-          header = 'Your evidence (optional)',
-          evidence = draft.evidence.getPopulatedRowsOnly(),
-          url = ResponsePaths.evidencePage.evaluateUri({ externalId: claim.externalId })
-        )
-      }}
+      {{ evidenceCheckAndSend(
+        header = 'Your evidence (optional)',
+        evidence = draft.evidence.getPopulatedRowsOnly(),
+        url = ResponsePaths.evidencePage.evaluateUri({ externalId: claim.externalId })
+      ) }}
       {{ row(label = 'Comments about their evidence (optional)', value = draft.evidence.comment | default(''), bold = true) }}
       {{ tableEnd() }}
     {% endif %}
@@ -235,27 +211,23 @@
 
     {% if (admissionsApplicable and draft.isResponsePartiallyAdmitted()) or draft.isResponseRejectedFullyWithDispute() %}
       {{ tableStart('freeMediation', 'Free mediation') }}
-      {{
-          row(
-            label = 'Will you try mediation?',
-            value = t(draft.freeMediation.option) | capitalize,
-            changeLink = ResponsePaths.freeMediationPage.evaluateUri({ externalId: claim.externalId }),
-            bold = true
-          )
-      }}
+      {{ row(
+        label = 'Will you try mediation?',
+        value = t(draft.freeMediation.option) | capitalize,
+        changeLink = ResponsePaths.freeMediationPage.evaluateUri({ externalId: claim.externalId }),
+        bold = true
+      ) }}
       {{ tableEnd() }}
     {% endif %}
 
     <div class="column-two-thirds">
       <div class="form-group">
-        {{
-          statementOfTruth(
-            form,
-            statementOfTruthType = 'response',
-            label = 'I believe that the facts stated in this response are true.',
-            isQualified = (signatureType === SignatureType.QUALIFIED)
-          )
-        }}
+        {{ statementOfTruth(
+          form,
+          statementOfTruthType = 'response',
+          label = 'I believe that the facts stated in this response are true.',
+          isQualified = (signatureType === SignatureType.QUALIFIED)
+        ) }}
 
         {{ submitButton('Submit response') }}
 
