--- a/src/main/features/claimant-response/views/counter-offer-accepted.njk
+++ b/src/main/features/claimant-response/views/counter-offer-accepted.njk
@@ -1,5 +1,6 @@
 {% extends "layout.njk" %}
 {% from "form.njk" import csrfProtection, saveAndContinueButton, errorSummary, textArea %}
+{% from "./macro/repaymentPlanBlock.njk" import repaymentPlanBlock %}
 
 {% set heading = 'Repayment plan accepted' %}
 
@@ -9,8 +10,27 @@
       <form novalidate method="post">
         {{ csrfProtection(csrf) }}
 
-        <p> {{ t('The court has accepted your repayment plan.') }} </p>
+        {% if isOverriddenByDefendantsPaymentFrequency %}
+          <p> {{ t('The court has accepted your repayment amount, but the frequency will be set by the defendant.
+          We`ve converted the {{ courtOfferedAmount }} {{ claimantPaymentSchedule }} payment to
+          {{ convertedCourtOfferedAmount }} {{ defendantPaymentSchedule }} payments.', {
+              courtOfferedAmount: courtOfferedAmount | numeral,
+              claimantPaymentSchedule: claimantPaymentSchedule | renderPaymentScheduleType,
+              convertedCourtOfferedAmount: convertedCourtOfferedAmount | numeral,
+              defendantPaymentSchedule: defendantPaymentSchedule | renderPaymentScheduleType
+            }) }}</p>
 
+          {{
+          repaymentPlanBlock(
+            heading = 'The court`s proposed repayment plan',
+            repaymentPlan = claim.response.paymentIntention.repaymentPlan,
+            paymentPlan = paymentPlan
+          )
+          }}
+
+        {% else %}
+          <p> {{ t('The court has accepted your repayment plan.') }} </p>
+        {% endif %}
         {{ saveAndContinueButton() }}
       </form>
     </div>
