--- a/src/main/features/claimant-response/views/check-and-send.njk
+++ b/src/main/features/claimant-response/views/check-and-send.njk
@@ -40,6 +40,28 @@
 
       {{ row(label = 'Do you accept the defendant’s repayment plan?', bold = true, value = acceptPaymentMethodResponse,
         changeLink = ClaimantResponsePaths.acceptPaymentMethodPage.evaluateUri({ externalId: claim.externalId }), bottomBorder = true) }}
+
+      {% if draft.acceptPaymentMethod.accept.option === 'no' %}
+        {% if draft.alternatePaymentMethod.paymentOption.option.value === PaymentType.IMMEDIATELY.value %}
+          {% set alternatePaymentMethodResponse = t('Immediately') %}
+        {% elseif draft.alternatePaymentMethod.paymentOption.option.value === PaymentType.BY_SPECIFIED_DATE.value %}
+          {% set alternatePaymentMethodResponse = t('In full by {{ deadline }}', { deadline: draft.alternatePaymentMethod.paymentDate.date.toMoment() | date }) %}
+        {% elseif draft.alternatePaymentMethod.paymentOption.option.value === PaymentType.INSTALMENTS.value %}
+          {% set alternatePaymentMethodResponse = t('By instalments') %}
+        {% endif %}
+
+        {{ row(label = 'How would you like the defendant to pay?', bold = true, value = alternatePaymentMethodResponse,
+          changeLink = ClaimantResponsePaths.alternateRepaymentPlanPage.evaluateUri({ externalId: claim.externalId }), bottomBorder = true) }}
+
+        {% if draft.alternatePaymentMethod.paymentOption.option.value === PaymentType.INSTALMENTS.value %}
+          {{ row(label = 'Regular payments of', bold = true, value = draft.alternatePaymentMethod.paymentPlan.instalmentAmount | numeral,
+            changeLink = ClaimantResponsePaths.paymentPlanPage.evaluateUri({ externalId: claim.externalId }), bottomBorder = false) }}
+          {{ row(label = 'Frequency of payments', bold = true, value = draft.alternatePaymentMethod.paymentPlan.paymentSchedule.displayValue,
+            bottomBorder = false) }}
+          {{ row(label = 'Date for first instalment', bold = true, value = draft.alternatePaymentMethod.paymentPlan.firstPaymentDate.toMoment() | date,
+            bottomBorder = true) }}
+        {% endif %}
+      {% endif %}
     {% endif %}
 
     {{ tableEnd() }}
@@ -88,6 +110,20 @@
     {% endif %}
 
     {{ tableEnd() }}
+
+    {{ tableStart('judgmentRequest', 'Judgment request') }}
+
+      {{ row('Has the defendant paid some of the amount owed?',
+      draft.paidAmount.option.value | capitalize, changeLink = paidAmountUrl, bottomBorder = false, bold = true) }}
+
+      {% if draft.paidAmount.amount %}
+        {{ row('Amount already paid', draft.paidAmount.amount | numeral, bottomBorder = false, bold = true) }}
+      {% endif %}
+
+      {{ row('Amount to be paid by defendant', amountToBePaid | numeral, bold = true) }}
+
+    {{ tableEnd() }}
+
 
     {{ submitButton('Submit response') }}
 
