--- a/src/main/features/response/views/you-have-paid-less.njk
+++ b/src/main/features/response/views/you-have-paid-less.njk
@@ -1,14 +1,14 @@
 {% extends "layout.njk" %}
 {% from "form.njk" import submitButton, csrfProtection %}
 
-{% set heading = 'Why do you disagree with the claim?' %}
+{% set heading = 'You’ve paid less than the total claim amount' %}
 {% set claimantFullName = claim.claimData.claimant.name %}
 
 {% block content %}
   <div class="grid-row">
     <div class="column-two-thirds">
 
-      <p>{{ t('You need to explain why you believe you don\'t owe the remaining amount.') }}</p>
+      <p>{{ t('You need to explain why you believe you don’t owe the remaining amount.') }}</p>
       <p>{{ t('If {{ claimantFullName }} rejects your explanation you might have to go to a hearing.',
           { claimantFullName : claimantFullName }) }}</p>
 
