--- a/src/main/features/claimant-response/views/check-and-send.njk
+++ b/src/main/features/claimant-response/views/check-and-send.njk
@@ -111,19 +111,20 @@
 
     {{ tableEnd() }}
 
-    {{ tableStart('judgmentRequest', 'Judgment request') }}
+    {%  if draft.formaliseRepaymentPlan.option.value === FormaliseRepaymentPlanOption.REQUEST_COUNTY_COURT_JUDGEMENT.value %}
+      {{ tableStart('judgmentRequest', 'Judgment request') }}
 
-      {{ row('Has the defendant paid some of the amount owed?',
-      draft.paidAmount.option.value | capitalize, changeLink = ClaimantResponseCCJPath.paidAmountPage.evaluateUri({ externalId: claim.externalId }), bottomBorder = false, bold = true) }}
+        {{ row('Has the defendant paid some of the amount owed?',
+        draft.paidAmount.option.value | capitalize, changeLink = ClaimantResponseCCJPath.paidAmountPage.evaluateUri({ externalId: claim.externalId }), bottomBorder = false, bold = true) }}
 
-      {% if draft.paidAmount.amount %}
-        {{ row('Amount already paid', draft.paidAmount.amount | numeral, bottomBorder = false, bold = true) }}
-      {% endif %}
+        {% if draft.paidAmount.amount %}
+          {{ row('Amount already paid', draft.paidAmount.amount | numeral, bottomBorder = false, bold = true) }}
+        {% endif %}
 
-      {{ row('Amount to be paid by defendant', (claim.totalAmountTillToday - draft.paidAmount.amount) | numeral,bold = true) }}
+        {{ row('Amount to be paid by defendant', (claim.totalAmountTillToday - draft.paidAmount.amount) | numeral,bold = true) }}
 
-    {{ tableEnd() }}
-
+      {{ tableEnd() }}
+    {% endif %}
 
     {{ submitButton('Submit response') }}
 
