--- a/src/main/features/response/views/your-mobile.njk
+++ b/src/main/features/response/views/your-mobile.njk
@@ -7,13 +7,13 @@
   <div class="grid-row">
       <div class="column-two-thirds">
 
-        <p>{{ t('We might need to speak to you about this claim. We'll only call on weekdays between 9am and 5pm.') }}</p>
-        <p>{{ t('We'll also give your number to the claimant.') }}</p>
+        <p>{{ t('We might need to speak to you about this claim. We’ll only call on weekdays between 9am and 5pm.') }}</p>
+        <p>{{ t('We’ll also give your number to the claimant.') }}</p>
 
         <form method="post">
           {{ csrfProtection(csrf) }}
 
-          {{ input('Add a phone number (optional)', 'number', form, '', labelClass = 'visually-hidden') }}
+          {{ input('Enter a phone number (optional)', 'number', form, '', labelClass = 'visually-hidden') }}
           {{ saveAndContinueButton() }}
         </form>
       </div>
