--- a/src/main/features/claimant-response/views/payment-option.njk
+++ b/src/main/features/claimant-response/views/payment-option.njk
@@ -1,6 +1,6 @@
 {% extends "layout.njk" %}
 
-{% from "form.njk" import saveAndContinueButton, csrfProtection, radioGroup, radioGroupWithHintPanel, errorSummary %}
+{% from "form.njk" import saveAndContinueButton, csrfProtection, radioGroup, errorSummary %}
 
 {% set heading = 'How do you want the defendant to pay?' %}
 
