--- a/src/main/features/claimant-response/views/check-and-send.njk
+++ b/src/main/features/claimant-response/views/check-and-send.njk
@@ -115,13 +115,13 @@
       {{ tableStart('judgmentRequest', 'Judgment request') }}
 
         {{ row('Has the defendant paid some of the amount owed?',
-        draft.paidAmount.option.value | capitalize, changeLink = ClaimantResponseCCJPath.paidAmountPage.evaluateUri({ externalId: claim.externalId }), bottomBorder = false, bold = true) }}
+        draft.paidAmount.option.value | capitalize, changeLink = ClaimantResponseCCJPath.paidAmountPage.evaluateUri({ externalId: claim.externalId }), bottomBorder = not draft.paidAmount.amount, bold = true) }}
 
         {% if draft.paidAmount.amount %}
-          {{ row('Amount already paid', draft.paidAmount.amount | numeral, bottomBorder = false, bold = true) }}
+          {{ row('Amount already paid', draft.paidAmount.amount | numeral, bottomBorder = true, bold = true) }}
         {% endif %}
 
-        {{ row('Amount to be paid by defendant', (claim.totalAmountTillToday - draft.paidAmount.amount) | numeral,bold = true) }}
+        {{ row('Total to be paid by defendant', (claim.totalAmountTillToday - (draft.paidAmount.amount or 0)) | numeral,bold = true) }}
 
       {{ tableEnd() }}
     {% endif %}
