--- a/src/main/views/macro/externalLink.njk
+++ b/src/main/views/macro/externalLink.njk
@@ -1,4 +1,3 @@
 {% macro externalLink(text, href) %}
   <a href="{{ href }}" target="_blank">{{ text }}</a>
-  <span class="font-xsmall">{{ t('(opens in a new window)') }}</span>
-{% endmacro %}
+  <span class="font-xsmall">{{ t('(opens in a new window)') }}</span>{% endmacro %}
