--- a/src/main/views/macro/statementOfTruth.njk
+++ b/src/main/views/macro/statementOfTruth.njk
@@ -32,11 +32,10 @@ macro statementOfTruth(
           <li>{{ t('chief executive') }} </li>
           <li>{{ t('manager or other officer of the company or corporation') }}</li>
         </ul>
-        <p>{{ t("If your company isn't registered, a senior position could also be the:") }}</p>
+        <p>{{ t("If your corporation isn't registered, a senior position could be:") }}</p>
         <ul class="list-bullet list">
-          <li>{{ t('chairman') }}</li>
-          <li>{{ t('president') }}</li>
-          <li>{{ t('town clerk or other similar officer of the corporation.') }}</li>
+          <li>{{ t('the chairperson or president') }}</li>
+          <li>{{ t('another officer of the corporation') }}</li>
         </ul>
       </div>
     </details>
