--- a/src/main/common/components/ccj/paid-amount-summary.njk
+++ b/src/main/common/components/ccj/paid-amount-summary.njk
@@ -9,7 +9,7 @@
 
     <div class="form-group">
       <p>
-        {{ t('Judgment will be entered against the defendant for this amount. It includes the claim fee you’ve paid.') }}
+        {{ t('Judgment will be entered against the defendant for this amount.') }}
       </p>
       <table class="table-form">
         <caption class="visuallyhidden">{{ t('Amount payable by the defendant') }}</caption>
