--- a/src/main/features/claimant-response/views/check-and-send.njk
+++ b/src/main/features/claimant-response/views/check-and-send.njk
@@ -77,39 +77,41 @@
     {% endif %}
     {{ tableEnd() }}
 
-    {{ tableStart('settlementAgreement', 'Settlement agreement') }}
+    {%  if draft.formaliseRepaymentPlan.option.value === FormaliseRepaymentPlanOption.SIGN_SETTLEMENT_AGREEMENT.value %}
+      {{ tableStart('settlementAgreement', 'Settlement agreement') }}
 
-    {% if claim.response.paymentIntention.paymentDate %}
-      {{ row(label = 'The offer',
-        value = t('{{ defendantFullName }} will pay the full amount, no later than {{ paymentDate }}',
-          {
-            defendantFullName: claim.response.defendant.name,
-            paymentDate: claim.response.paymentIntention.paymentDate | date
-          }
-        ),
-        bottomBorder = true, bold = true
-      ) }}
-      {{ row(label = 'Completion date',
-        value = claim.response.paymentIntention.paymentDate | date,
-        bottomBorder = true, bold = true
-      ) }}
-    {% elseif claim.response.paymentIntention.repaymentPlan %}
-      {{ row(label = 'The offer',
-        value = t('{{ defendantFullName }} will pay instalments of {{ instalmentAmount }} {{ paymentSchedule }}. The first instalment will be paid by {{ firstPaymentDate }}.',
-          { defendantFullName: claim.response.defendant.name,
-            instalmentAmount: claim.response.paymentIntention.repaymentPlan.instalmentAmount | numeral,
-            paymentSchedule: claim.response.paymentIntention.repaymentPlan.paymentSchedule | renderPaymentSchedule,
-            firstPaymentDate: claim.response.paymentIntention.repaymentPlan.firstPaymentDate | date
-          }),
-        bottomBorder = true, bold = true
-      ) }}
-      {{ row(label = 'Completion date',
-        value = lastPaymentDate | date,
-        bottomBorder = true, bold = true
-      ) }}
+      {% if claim.response.paymentIntention.paymentDate %}
+        {{ row(label = 'The offer',
+          value = t('{{ defendantFullName }} will pay the full amount, no later than {{ paymentDate }}',
+            {
+              defendantFullName: claim.response.defendant.name,
+              paymentDate: claim.response.paymentIntention.paymentDate | date
+            }
+          ),
+          bottomBorder = true, bold = true
+        ) }}
+        {{ row(label = 'Completion date',
+          value = claim.response.paymentIntention.paymentDate | date,
+          bottomBorder = true, bold = true
+        ) }}
+      {% elseif claim.response.paymentIntention.repaymentPlan %}
+        {{ row(label = 'The offer',
+          value = t('{{ defendantFullName }} will pay instalments of {{ instalmentAmount }} {{ paymentSchedule }}. The first instalment will be paid by {{ firstPaymentDate }}.',
+            { defendantFullName: claim.response.defendant.name,
+              instalmentAmount: claim.response.paymentIntention.repaymentPlan.instalmentAmount | numeral,
+              paymentSchedule: claim.response.paymentIntention.repaymentPlan.paymentSchedule | renderPaymentSchedule,
+              firstPaymentDate: claim.response.paymentIntention.repaymentPlan.firstPaymentDate | date
+            }),
+          bottomBorder = true, bold = true
+        ) }}
+        {{ row(label = 'Completion date',
+          value = lastPaymentDate | date,
+          bottomBorder = true, bold = true
+        ) }}
+      {% endif %}
+
+      {{ tableEnd() }}
     {% endif %}
-
-    {{ tableEnd() }}
 
     {%  if draft.formaliseRepaymentPlan.option.value === FormaliseRepaymentPlanOption.REQUEST_COUNTY_COURT_JUDGEMENT.value %}
       {{ tableStart('judgmentRequest', 'Judgment request') }}
