ROC-4049: Allow claimant suggest payment plan in claimant response flow (#804)

--- a/src/main/common/components/payment-intention/payment-plan.njk
+++ b/src/main/common/components/payment-intention/payment-plan.njk
@@ -2,8 +2,6 @@
 {% from "form.njk" import linkButton, saveAndContinueButton, errorSummary, csrfProtection, radioGroup, poundInput, textArea %}
 {% from "date.njk" import dateInput %}
 
-{% set heading = 'Your repayment plan' %}
-
 {% block additional_scripts %}
   {% include "payment-plan-calculation-scripts.njk" %}
 {% endblock %}
@@ -16,20 +14,17 @@
     <form method="post" novalidate class="payment-plan-calculation">
       {{ csrfProtection(csrf) }}
 
-      <h2 class="heading-small">Your finances</h2>
-      <p>{{ t('Your total monthly income is {{ monthlyIncome }}',
-          { monthlyIncome: monthlyIncome | numeral }) }}</p>
-      <p>{{ t('Your total monthly expenses is {{ monthlyExpenses }}',
-          { monthlyExpenses: monthlyExpenses | numeral }) }}</p>
+      {% if monthlyIncomeAmount and monthlyExpensesAmount %}
+        <h2 class="heading-small">Your finances</h2>
+        <p>{{ t('Your total monthly income is {{ monthlyIncomeAmount }}',
+            { monthlyIncomeAmount: monthlyIncomeAmount | numeral }) }}</p>
+        <p>{{ t('Your total monthly expenses is {{ monthlyExpensesAmount }}',
+            { monthlyExpensesAmount: monthlyExpensesAmount | numeral }) }}</p>
+      {% endif %}
 
       <input type="hidden" name="totalAmount" value="{{ totalAmount }}"/>
 
-      <div class="form-group">
-        <fieldset>
-          <legend class="visually-hidden">{{ t('Regular payments of') }}</legend>
-          {{ poundInput('Regular payments of:', 'instalmentAmount', form, 'For example, £200', bold = true) }}
-        </fieldset>
-      </div>
+      {{ poundInput('Regular payments of:', 'instalmentAmount', form, 'For example, £200', bold = true) }}
 
       <div class="form-group">
         {{ radioGroup(
@@ -61,12 +56,7 @@
       <h2 class="heading-small">Length of repayment plan</h2>
       <p id="lengthOfRepayment" class="lengthOfRepayment"> {{ paymentLength | default('-') }} </p>
 
-      <div class="form-group">
-        <fieldset>
-          <legend class="visually-hidden">{{ t('When will you make the first payment') }}</legend>
-          {{ dateInput('firstPaymentDate', form, hint = t('For example, {{ nextMonth }}', { nextMonth: 'now' | addDays(30) | inputDate }), label = 'When will you make the first payment?') }}
-        </fieldset>
-      </div>
+      {{ dateInput('firstPaymentDate', form, hint = t('For example, {{ nextMonth }}', { nextMonth: 'now' | addDays(30) | inputDate }), label = 'When will you make the first payment?') }}
 
       {{ saveAndContinueButton() }}
     </form>
