--- a/src/main/common/components/payment-intention/payment-date.njk
+++ b/src/main/common/components/payment-intention/payment-date.njk
@@ -2,15 +2,13 @@
 {% from "form.njk" import csrfProtection, saveAndContinueButton, errorSummary %}
 {% from "date.njk" import dateInput %}
 
-{% set heading = 'What date will you pay on?' %}
-
 {% block content %}
   <div class="grid-row">
     <div class="column-two-thirds">
       <form method="post">
         {{ csrfProtection(csrf) }}
 
-        {{ dateInput(form = form, name = 'date', hint = t('For example, {{ futureDate }}', { futureDate: futureDate | inputDate })) }}
+        {{ dateInput(form = form, name = 'date', hint = t('For example, {{ nextMonth }}', { nextMonth : 'now' | addDays(30) | inputDate })) }}
 
         {{ saveAndContinueButton() }}
       </form>
