--- a/src/main/common/components/ccj/paid-amount-summary.njk
+++ b/src/main/common/components/ccj/paid-amount-summary.njk
@@ -9,7 +9,7 @@
 
     <div class="form-group">
       <p>
-        {{ t('Judgment will be entered against the defendant for this amount. It includes the claim fee you’ve paid.') }}
+        {{ t('Judgment will be entered against the defendant for this amount.') }}
       </p>
       <table class="table-form">
         <caption class="visuallyhidden">{{ t('Amount payable by the defendant') }}</caption>
@@ -29,7 +29,7 @@
         {% if interestDetails %}
         <tr>
           <th scope="row">
-            {{ interestSnippet(label = 'Interest', interestDetails.rate, interestDetails.numberOfDays,
+            {{ interestSnippet(label = 'Interest to date', interestDetails.rate, interestDetails.numberOfDays,
               interestDetails.interestFromDate, defaultJudgmentDate, interestDetails.specificDailyAmount) }}
           </th>
           <td class="numeric last">
@@ -43,7 +43,6 @@
             <span class="font-small">{{ claim.claimData.feeAmountInPennies | pennies2pounds | numeral }}</span>
           </td>
         </tr>
-
         {% if alreadyPaid %}
         <tr>
           <th scope="col" class="bold-small">{{ t('Sub total') }}</th>
@@ -66,7 +65,7 @@
     </div>
 
     <div class="form-group">
-      <a class="button" href="{{nextPageUrl}}">{{ t('Continue') }}</a>
+      <a class="button" href="{{ nextPageUrl }}">{{ t('Continue') }}</a>
     </div>
   </div>
 </div>
