--- a/src/main/features/claimant-response/views/macro/repaymentPlanBlock.njk
+++ b/src/main/features/claimant-response/views/macro/repaymentPlanBlock.njk
@@ -10,8 +10,8 @@
     instalmentAmount = repaymentPlan.instalmentAmount,
     paymentSchedule = repaymentPlan.paymentSchedule,
     firstPaymentDate = repaymentPlan.firstPaymentDate,
-    lastPaymentOn = paymentPlan.getLastPaymentDate(),
-    lengthOfPayment = paymentPlan.getPaymentLength()
+    lastPaymentOn = paymentPlan.calculateLastPaymentDate(),
+    lengthOfPayment = paymentPlan.calculatePaymentLength()
   )
   }}
 {% endmacro %}
