--- a/src/main/features/dashboard/views/macro/claimStatus/offerSubmitted.njk
+++ b/src/main/features/dashboard/views/macro/claimStatus/offerSubmitted.njk
@@ -36,5 +36,5 @@
 {% endmacro %}
 
 {% macro _viewAndRespondToOfferLink(claim) %}
-  <a href="{{ OfferPaths.responsePage.evaluateUri({ externalId: claim.externalId }) }}">{{ t('View and respond to offer') }}</a>
+  <a href="{{ OfferPaths.responsePage.evaluateUri({ externalId: claim.externalId }) }}">{{ t('View and respond to the offer') }}</a>
 {% endmacro %}
